Fix expand/collapse for treeview.

--- a/apps/common/main/resources/less/treeview.less
+++ b/apps/common/main/resources/less/treeview.less
@@ -1,5 +1,19 @@
 .treeview {
-  .item {
+  &.inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+
+    .empty-text {
+      text-align: center;
+      height: 100%;
+      width: 100%;
+      color: #b2b2b2;
+    }
+  }
+
+  > .item {
     display: block;
     width: 100%;
     .box-shadow(none);
